--- a/index.html
+++ b/index.html
@@ -40,12 +40,12 @@
             <div class="accordion-btn-container">
               <img
                 src="./assets/images/icon-minus.svg"
-                src="minus icon"
+                alt="minus icon"
                 class="accordion-btn-minus btn-active"
               />
               <img
                 src="./assets/images/icon-plus.svg"
-                src="minus icon"
+                alt="minus icon"
                 class="accordion-btn-plus btn-inactive"
               />
             </div>
@@ -65,12 +65,12 @@
             <div class="accordion-btn-container">
               <img
                 src="./assets/images/icon-minus.svg"
-                src="minus icon"
+                alt="minus icon"
                 class="accordion-btn-minus"
               />
               <img
                 src="./assets/images/icon-plus.svg"
-                src="minus icon"
+                alt="minus icon"
                 class="accordion-btn-plus"
               />
             </div>
@@ -90,12 +90,12 @@
             <div class="accordion-btn-container">
               <img
                 src="./assets/images/icon-minus.svg"
-                src="minus icon"
+                alt="minus icon"
                 class="accordion-btn-minus"
               />
               <img
                 src="./assets/images/icon-plus.svg"
-                src="minus icon"
+                alt="minus icon"
                 class="accordion-btn-plus"
               />
             </div>
@@ -109,17 +109,17 @@
         <article class="accordion-content" tabindex="1">
           <div class="accordion-subheader">
             <h2 class="accordion-subtitle">
-              How can I get help if I'm stuck on a Frontend Mentor challenge?
+              How can I get help if I'm stuck on a challenge?
             </h2>
             <div class="accordion-btn-container">
               <img
                 src="./assets/images/icon-minus.svg"
-                src="minus icon"
+                alt="minus icon"
                 class="accordion-btn-minus"
               />
               <img
                 src="./assets/images/icon-plus.svg"
-                src="minus icon"
+                alt="minus icon"
                 class="accordion-btn-plus"
               />
             </div>
